--- a/index.html
+++ b/index.html
@@ -7,11 +7,14 @@
 </head>
 <body style="background: #000; color: white;">
     <h1>Data Structure & Algorizm</h1>
+    <script src="test.js"></script>
     <!-- <script src="codeSnap.js"></script> -->
-    <!-- <script src="test.js"></script> -->
-    <script src="array.js"></script>
+    <!-- <script src="array.js"></script> -->
     <!-- <script src="stack.js"></script> -->
     <!-- <script src="linkedList.js"></script> -->
     <!-- <script src="queue.js"></script> -->
+    <!-- <script src="map.js"></script> -->
+    <!-- <script src="trees.js"></script> -->
+    <script src="hashTable.js"></script>
 </body>
 </html>
